--- a/SAF.Web/Views/Solicitud/editarSolicitudAuditor.cshtml
+++ b/SAF.Web/Views/Solicitud/editarSolicitudAuditor.cshtml
@@ -291,7 +291,7 @@
             });
         };
 
-        var tabCapacitaciones = $("#tabCapacitaciones").dataTable({
+        tabCapacitaciones = $("#tabCapacitaciones").dataTable({
             "info": false,
             "bServerSide": false,
             "data": _capacitaciones_,
@@ -382,7 +382,7 @@
             });
         };
 
-        var tabExperiencias = $("#tabExperiencias").dataTable({
+        tabExperiencias = $("#tabExperiencias").dataTable({
             "info": false,
             "bServerSide": false,
             "data": _experiencias_,
