--- a/SAF.Web/Views/InvitacionAuditor/_AgendaAuditor.cshtml
+++ b/SAF.Web/Views/InvitacionAuditor/_AgendaAuditor.cshtml
@@ -19,14 +19,14 @@
                     Esta disponibilidad esta sujeta a las invitaciones que acepte el auditor
                 </p>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <div class="row">
                     <div class="col-md-4">
                         @Html.LabelFor(c => c.numeroHorasLaboral)
                         @Html.TextBoxFor(c => c.numeroHorasLaboral, new { @class = "form-control", @readonly = "true" })
                     </div>
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
                 <div class="row">
@@ -75,17 +75,87 @@
 
                         <ul class="nav nav-tabs" role="tablist">
                             <li role="presentation" class="active"><a href="#tabsDisponibilidadAuditor" aria-controls="home" role="tab" data-toggle="tab">Disponibilidad</a></li>
-                            <li role="presentation"><a href="#tabsFechasAsignadas" aria-controls="profile" role="tab" data-toggle="tab">Fechas Asignadas</a></li>
+                            <li role="presentation"><a href="#tabsFechasAsignadas" aria-controls="profile" role="tab" data-toggle="tab">Fechas Invitadas</a></li>
                         </ul>
                         <div class="tab-content">
 
                             <div role="tabpanel" class="tab-pane active" id="tabsDisponibilidadAuditor">
+                                <!--INICIO-->
 
-                                <table id="tabDisponibilidadAuditor" class="table table-striped table-bordered" cellpadding="0" cellspacing="0" border="0"></table>
+
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="box box-primary color-palette-box">
+                                            <div class="box-header with-border">
+                                                <h3 class="box-title"><i class="fa fa-calendar"></i>&nbsp;Lista de fechas disponibles</h3>
+                                            </div>
+                                            <div class="box-body">
+
+                                                <div class="form-group">
+                                                    <div class="row">
+                                                        <div class="col-md-12">
+                                                            <table id="tabDisponibilidadAuditor" class="table table-striped table-bordered" cellpadding="0" cellspacing="0" border="0"></table>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <div class="row">
+                                                        <div class="col-md-12">
+                                                            <button type="button" id="btnRegistrarAgenda" class="btn btn-primary"><i class="fa fa-check"></i>&nbsp;Asignar Fechas</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+
+                                <!--FIN-->
                             </div>
 
                             <div role="tabpanel" class="tab-pane" id="tabsFechasAsignadas">
-                                <table id="tabFechasAsig" class="table table-striped table-bordered" cellpadding="0" cellspacing="0" border="0"></table>
+
+
+                                <!--INICIO-->
+
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="box box-primary color-palette-box">
+                                            <div class="box-header with-border">
+                                                <h3 class="box-title"><i class="fa fa-calendar"></i>&nbsp;Lista de fechas invitadas</h3>
+                                            </div>
+                                            <div class="box-body">
+
+                                                <div class="form-group">
+                                                    <div class="row">
+                                                        <div class="col-md-12">
+                                                            <table id="tabFechasAsig" class="table table-striped table-bordered" cellpadding="0" cellspacing="0" border="0"></table>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <div class="row">
+                                                        <div class="col-md-12">
+                                                            <button type="button" id="btnEliminarFechaAsignada" class="btn btn-danger"><i class="fa fa-trash"></i>&nbsp;Eliminar Fechas</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+
+                                <!--FIN-->
+
+
                             </div>
 
                         </div>
@@ -98,12 +168,17 @@
 
 
         </div>
-        <div class="modal-footer">
-            <input type="button" class="btn btn-primary" id="btnRegistrarAgenda" value="Registrar en Agenda" />
+        @*<div class="modal-footer">
             <input type="button" class="btn btn-default" id="btnCancelarRegAgenda" value="Cerrar" data-dismiss="modal" />
-        </div>
+        </div>*@
     </div>
 </div>
+
+
+
+
+
+
 <script type="text/javascript">
 
     var _dataDisponibilidadAuditor_ = null;
@@ -156,7 +231,15 @@
         "columns": [
 
             { "sTitle": "Fechas Asignadas" },
-            { "sTitle": "Horas Asignadas", "sClass": "center" }
+            {
+                "sTitle": "<center><input type='checkbox' id='chkSeleccionarTodo' onclick='javascript:seleccionarTodasFechas();' /></center>",
+                "bSortable": false,
+                "sClass": "center",
+                "sWidth": "5%",
+                "render": function (data, type, row) {
+                    return "<center><input type='checkbox' name='chkDiaAsignado' value = '" + row[0] + "' /></center>";
+                }
+            }
 
         ]
     });
@@ -218,6 +301,8 @@
             },
             success: function (result) {
                 mostrarNotificacion(result);
+                listarDisponibilidadAuditor();
+                listarFechasAsignadasAuditor();
             }
         });
     }
