--- a/SAF.Web/Views/Propuesta/_AsignarFechaEquipo.cshtml
+++ b/SAF.Web/Views/Propuesta/_AsignarFechaEquipo.cshtml
@@ -1,6 +1,8 @@
 ﻿@model SAF.Web.Models.EquipoAuditoriaModel
 
 @Html.HiddenFor(c=>c.CODPROEQU)
+@Html.HiddenFor(c => c.codigoPropuestaAsigFecha)
+
 
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
@@ -38,7 +40,7 @@
                                     <div class="form-group">
                                         <div class="row">
                                             <div class="col-md-12">
-                                                <button class="btn btn-primary" type="button" id="btnAsignarFechas"><i class="fa fa-save"></i>&nbsp;Asignar fechas</button>
+                                                <button class="btn btn-primary" type="button" id="btnAsignarFechas"><i class="fa fa-check"></i>&nbsp;Asignar fechas</button>
                                             </div>
                                         </div>
                                     </div>
@@ -99,7 +101,8 @@
         listarFechasInvitadas();
         listarFechasAsignadas();
         $("#btnAsignarFechas").click(asignarFechas);
-        
+        $("#btnEliminarFechas").click(eliminarFechasAsignada);
+
     });
 
     var tabFechasInvitadas = $("#tabFechasInvitadas").dataTable({
@@ -132,7 +135,7 @@
                 "sClass": "center",
                 "sWidth": "5%",
                 "render": function (data, type, row) {
-                    return '<center><input type="checkbox" name="chkDiaAsignado" /></center>';
+                    return '<center><input type="checkbox" name="chkDiaAsignado" value="' + row[1] + '" /></center>';
                 }
             }
         ]
@@ -156,7 +159,7 @@
             url: '@Url.Action("listadoFechasAsignadas", "Propuesta")',
             type: 'POST',
             async: false,
-            data: { idEquipo: $("#CODPROEQU").val()  },
+            data: { idEquipo: $("#CODPROEQU").val() },
             success: function (result) {
                 _dataFechasAsignadas_ = result;
                 tabFechasAsignadas.fnReloadData(_dataFechasAsignadas_);
@@ -183,6 +186,31 @@
             success: function (result) {
                 mostrarNotificacion(result);
                 listarFechasAsignadas();
+                listarFechasInvitadas();
+            }
+        });
+    }
+
+
+    function eliminarFechasAsignada() {
+        var diasAsigSeleccionados = "";
+
+        $("input[name='chkDiaAsignado']:checked").each(function (i, v) {
+            if (diasAsigSeleccionados == "")
+                diasAsigSeleccionados = $(this).val();
+            else
+                diasAsigSeleccionados = diasAsigSeleccionados + "," + $(this).val();
+        });
+
+        $.ajax({
+            url: '@Url.Action("EliminarFechaAsignadas", "Propuesta")',
+            type: 'POST',
+            async: false,
+            data: { idPropuesta: $("#codigoPropuestaAsigFecha").val(), fechasAsignadas: diasAsigSeleccionados },
+            success: function (result) {
+                mostrarNotificacion(result);
+                listarFechasAsignadas();
+                listarFechasInvitadas();
             }
         });
     }
