--- a/SAF.Web.Intranet/Views/Shared/_PageLeftMenu.cshtml
+++ b/SAF.Web.Intranet/Views/Shared/_PageLeftMenu.cshtml
@@ -7,7 +7,7 @@
                 <img src="~/Content/Image/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
-                <p>Alexander Pierce</p>
+                <p>@Session["sessionUsuarioNombreCompleto"].ToString()</p>
                 <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
         </div>
@@ -23,33 +23,30 @@
         <!-- /.search form -->
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu">
-            <li class="header">MAIN NAVIGATION</li>
+            <li class="header">MENU PRINCIPAL</li>
 
             <li class="active treeview">
                 <a href="#">
-                    <i class="fa fa-book"></i> <span>Solicitud</span>
+                    <i class="fa fa-book"></i> <span>Revisar Solicitud</span>
                     <i class="fa fa-angle-left pull-right"></i>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="pages/forms/general.html"><i class="fa fa-circle-o"></i> Inscripción</a></li>
-                    <li><a href="pages/forms/advanced.html"><i class="fa fa-circle-o"></i> Actualización</a></li>
+                    <li><a href='@Url.Action("Index", "SolicitudAdmin")'><i class="fa fa-circle-o"></i> Bandeja</a></li>
                 </ul>
             </li>
             <li class="treeview">
                 <a href="#">
                     <i class="fa fa-files-o"></i>
-                    <span>Publicacion</span>
+                    <span>Propuesta</span>
                     <!--<span class="label label-primary pull-right">4</span>-->
                     <i class="fa fa-angle-left pull-right"></i>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Cronogramas</a></li>
-                    <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i> Concursos</a></li>
-                    <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Respuestas Consultas</a></li>
+                    <li><a href='@Url.Action("Index","Propuesta")'><i class="fa fa-circle-o"></i> Calificacion</a></li>
                 </ul>
             </li>
 
-            <li class="treeview">
+            @*<li class="treeview">
                 <a href="#">
                     <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
                 </a>
@@ -180,7 +177,7 @@
             <li class="header">LABELS</li>
             <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
             <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
-            <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
+            <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>*@
         </ul>
     </section>
     <!-- /.sidebar -->
